# moo-counter

./: .coverage  .gitignore  20250909-puzzle.moo  20250910-puzzle.moo  Cargo.toml  ENGINES.md  Makefile  README.md  moo_counter.py  package.json  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  daily-simulation.yml  docs.yml
docs/: graph.html  index.html  script.js  styles.css
nodejs/: index.js
puzzles/: 20250911-puzzle.moo  20250912-10-mini.moo  20250912-15-maxi.moo  20250912-5-micro.moo  20250913-10-mini.moo  20250913-15-maxi.moo  20250913-5-micro.moo  20250914-10-mini.moo  20250914-15-maxi.moo  20250914-5-micro.moo  20250915-10-mini.moo  20250915-15-maxi.moo  20250915-5-micro.moo  20250916-10-mini.moo  20250916-15-maxi.moo  20250916-5-micro.moo  20250917-10-mini.moo  20250917-15-maxi.moo  20250917-5-micro.moo  20250918-10-mini.moo  20250918-15-maxi.moo  20250918-5-micro.moo  20250919-10-mini.moo  20250919-15-maxi.moo  20250919-5-micro.moo  20250920-10-mini.moo  20250920-15-maxi.moo  20250920-5-micro.moo  20250921-10-mini.moo  20250921-15-maxi.moo  20250921-5-micro.moo  20250922-10-mini.moo  20250922-15-maxi.moo  20250922-5-micro.moo
src/: lib.rs
src/moo_counter/: __main__.py  analysis.py  cli.py  display.py  engine.py  moo_counter.py  moo_types.py  parallel.py  strategies.py  utils.py
src/moo_counter/engines/: __init__.py  c_engine.c  c_engine_full.c  cython_engine.pyx  python_engine.py  setup.py  wrappers.py
src/moo_counter/strategies/: __init__.py  greedy.py  mcts.py  strategy.py
tests/: __init__.py  test_cli.py  test_engine_correctness.py  test_engine_registration.py
